tests/baselines/reference/project/declareVariableCollision/node/declareVariableCollision.errors.txt
error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
decl.d.ts(8,19): error TS1540: A 'namespace' declaration should not be declared using the 'module' keyword. Please use the 'namespace' keyword instead.
in1.d.ts(1,8): error TS2300: Duplicate identifier 'a'.
in2.d.ts(1,8): error TS2300: Duplicate identifier 'a'.


!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== decl.d.ts (1 errors) ====
    // bug 535531: duplicate identifier error reported for "import" declarations in separate files
    
    declare namespace A
    {
    
        class MyRoot { }
        
        export module B
                      ~
!!! error TS1540: A 'namespace' declaration should not be declared using the 'module' keyword. Please use the 'namespace' keyword instead.
        {
            class MyClass{ }
        }
    }
==== in1.d.ts (1 errors) ====
    import a = A;
           ~
!!! error TS2300: Duplicate identifier 'a'.
!!! related TS6203 in2.d.ts:1:8: 'a' was also declared here.
==== in2.d.ts (1 errors) ====
    import a = A;
           ~
!!! error TS2300: Duplicate identifier 'a'.
!!! related TS6203 in1.d.ts:1:8: 'a' was also declared here.